<resources>
    <string name="app_name">Moutain-Rescue-Services</string>
    <string name="next">next</string>
    <string name="phone_number">Phone number</string>
    <string name="position">Position</string>
    <string name="waiting_for_location_update">Waiting for location update...</string>
    <string name="save_me">Save me</string>
    <string name="ok">Ok</string>
    <string name="back">Back</string>
    <string name="lost">Lost</string>
    <string name="broken_leg">Broken leg</string>
</resources>
